# FlappyAI

./: .gitignore  Bird.cpp  Bird.h  CMakeLists.txt  Font.cpp  Font.h  Input.cpp  Input.h  NeuralNetwork.cpp  Obstacle.cpp  Obstacle.h  README.md  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Vector2f.cpp  Vector2f.h  Window.cpp  Window.h  main.cpp
cmake/modules/: FindGLFW3.cmake
dependencies/: glad.c
shaders/: font.vs  parallax.fs  parallax.vs
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/include/: Font.h  Input.h  Log.h  ResourceManager.h  Shader.h  ShaderLoader.h  Sprite.h  Texture.h  TextureLoader.h  Vector2f.h  Window.h
src/core/src/: Font.cpp  Input.cpp  ResourceManager.cpp  Shader.cpp  ShaderLoader.cpp  Sprite.cpp  Texture.cpp  TextureLoader.cpp  Vector2f.cpp  Window.cpp
src/launcher/: CMakeLists.txt
src/launcher/include/: Bird.h  NeuralNetwork.h
src/launcher/src/: Bird.cpp  NeuralNetwork.cpp  main.cpp
src/launcher/src/dependencies/: glad.c
src/launcher/src/dependencies/include/glad/: glad.h
src/launcher/src/dependencies/lib/: freetype.lib
src/launcher/src/dependencies/lib/Win32/: freetype.lib
src/shaders/: sprite_shader.fs  sprite_shader.vs
utility/: Log.cpp  Log.h  SID.h
