cmake_minimum_required(VERSION 3.9)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")

project(FlappyAI)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

add_subdirectory(src)

#file(COPY "src/launcher/src/dependencies/bin/Win32/glfw3.dll" DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
#file(COPY "src/launcher/src/dependencies/bin/Win32/glew32.dll" DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")